--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,8 @@
 
     "autoload": {
         "psr-4": {
-            "PHPCI\\": "PHPCI"
+            "PHPCI\\": "PHPCI",
+            "Phizzl\\PHPCI\\Plugins\\": "plugins/"
         }
     },
 
